<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>KafkaTopologies</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.ecloud>12-SNAPSHOT</version.ecloud>
        <version.metis>12-SNAPSHOT</version.metis>
        <version.slf4j>2.0.12</version.slf4j>
    </properties>

    <repositories>
        <repository>
            <id>artifactory.eanadev.org</id>
            <name>artifactory.eanadev.org-snapshots</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-snapshot-local</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>@{jacocoArgLine}
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.time=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version> <!-- Use the appropriate version -->
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-streams</artifactId>
            <version>3.6.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <dependency>
            <groupId>eu.europeana.cloud</groupId>
            <artifactId>ecloud-service-dps-storm-common</artifactId>
            <version>${version.ecloud}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-handler</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.cloud</groupId>
            <artifactId>ecloud-service-dps-storm-topologies-media-service</artifactId>
            <version>${version.ecloud}</version>
        </dependency>
        <dependency>
            <groupId>eu.europeana.cloud</groupId>
            <artifactId>ecloud-service-mcs-rest-client-java</artifactId>
            <version>${version.ecloud}</version>
        </dependency>
        <dependency>
            <groupId>eu.europeana.cloud</groupId>
            <artifactId>ecloud-service-commons</artifactId>
            <version>${version.ecloud}</version>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-media-service</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons.io</groupId>
                    <artifactId>commons.io</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-harvesting</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-transformation-service</artifactId>
            <version>${version.metis}</version>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-validation-service</artifactId>
            <version>${version.metis}</version>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-normalization</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-indexing</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.metis</groupId>
            <artifactId>metis-enrichment-client</artifactId>
            <version>${version.metis}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>eu.europeana.cloud</groupId>
            <artifactId>ecloud-service-dps-utils</artifactId>
            <version>${version.ecloud}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>5.3.32</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.2</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.3</version> <!-- Use the latest version -->
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>